start tar 7 באמצע 5 6 7