@@ -8,14 +8,15 @@ import java.util.stream.Collectors;
 /**
  * מציאת נקודות חיתוך עם הגופים
  */
-public abstract class  Intersectable
-{
+public interface Intersectable {
+
+
     /**
      *
      */
     public static class GeoPoint {
-        public  final Geometry geometry;
-        public  final Point point;
+        public Geometry geometry;
+        public Point point;
 
         /**
          *
@@ -37,48 +38,26 @@ public abstract class  Intersectable
         }
 
         @Override
-        public String toString() {
-            return "GeoPoint{" +
-                    "geometry=" + geometry +
-                    ", point=" + point +
-                    '}';
-        }
-
-        @Override
         public int hashCode() {
             return Objects.hash(geometry, point);
         }
     }
 
-    public List<GeoPoint> findGeoIntersections(Ray ray){
-        return findGeoIntersections(ray,Double.POSITIVE_INFINITY);
-    }
-    /**
-     *
-     * @param ray
-     * @param maxDistance
-     * @return
-     */
-    public List<GeoPoint> findGeoIntersections (Ray ray,double maxDistance){
-      return findGeoIntersectionsHelper(ray,maxDistance);
-    }
-
-    /**
-     *
-     * @param ray
-     * @param maxDistance
-     * @return
-     */
-    protected abstract List<GeoPoint> findGeoIntersectionsHelper(Ray ray,double maxDistance);
-
     /**
      * @param ray intersection in geometries
      * @return list of intersectables the the ray intersecte in geometries
      */
-    public List<Point> findIntersections(Ray ray) {
+    default List<Point> findIntersections(Ray ray) {
         var geoList = findGeoIntersections(ray);
         return geoList == null ? null
-                : geoList.stream().map(gp -> gp.point).toList();
+                : geoList.stream().map(gp -> gp.point).collect(Collectors.toList());
     }
+
+
+    /**
+     * @param ray
+     * @return
+     */
+    List<GeoPoint> findGeoIntersections (Ray ray);
 
 }
